Updated CSS of main page, redone logic to prevent gifv formatting errors, uploaded an image

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "website",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/LLighty/LightyWebpage",
+  "homepage": "https://LLighty.github.io/LightyWebpage/",
   "dependencies": {
     "bootstrap": "^4.3.1",
     "react": "^16.8.6",
