--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "homepage": "https://LLighty.github.io/LightyWebpage/",
   "dependencies": {
     "bootstrap": "^4.3.1",
+    "css-doodle": "^0.7.1",
+    "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.6",
